--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/styles.css" />
-  <script src="https://kit.fontawesome.com/1935d064dd.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" />
   <script defer src="js/ajax.js"></script>
   <!-- <script defer src="js/fetch.js"></script> -->
   <title>Random Quote Generator</title>
 </head>
 <body>
-  
+  <div class="container">
+    <h2>Quotes Generator</h2>
+    <form>
+      <div>
+        <label for="number">Number of Quotes</label>
+        <input type="number" id="number">
+      </div>
+      <button class="get-quotes">Get Quotes</button>
+    </form>
+    <hr>
+    <ul class="quotes"></ul>
+  </div>
 </body>
 </html>
