--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" />
-  <script defer src="js/ajax.js"></script>
-  <!-- <script defer src="js/fetch.js"></script> -->
+  <!-- <script defer src="js/ajax.js"></script> -->
+  <script defer src="js/fetch.js"></script>
   <title>Random Quote Generator</title>
 </head>
 <body>
